examples/test/testpolicy14702.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14702
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key35: value35
      key17: value10
      key16: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value27
          key26: value34
      podSelector:
        matchLabels:
          key46: value8
